# osmoinplace

./: Cargo.toml  README.MD
src/: main.rs
