[package]
authors = ["Boss <supanat.ptk@gmail.com"]
description = "Utility for setting up osmosis in-place testnet for development and testing."
edition = "2021"
license = "MIT OR Apache-2.0"
name = "osmoinplace"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.9", features = ["derive"]}
color-eyre = "0.6"
colored = "2.1.0"
fs_extra = "1.3.0"
futures = "0.3.30"
indicatif = "0.17.8"
lz4 = "1.25.0"
reqwest = {version = "0.12.5", features = ["stream"]}
tar = "0.4.41"
tempfile = "3.10.1"
tokio = {version = "1.38.1", features = ["tokio-macros", "macros", "rt-multi-thread"]}
which = "6.0.1"
